@@ -23,12 +23,8 @@
 package net.jacksum.actions.io.quick;
 
 import net.jacksum.actions.io.compare.CompareActionInterface;
-import net.jacksum.parameters.base.ConsoleParameters;
+import net.jacksum.parameters.base.*;
 import net.jacksum.parameters.combined.ChecksumParameters;
-import net.jacksum.parameters.base.CustomizedFormatParameters;
-import net.jacksum.parameters.base.ExpectationParameters;
-import net.jacksum.parameters.base.SequenceParameters;
-import net.jacksum.parameters.base.KeyParameters;
 import net.jacksum.parameters.combined.StatisticsParameters;
 
 /**
@@ -42,5 +38,6 @@ public interface QuickActionParameters extends
         ExpectationParameters,
         SequenceParameters,
         KeyParameters,
-        ConsoleParameters {
+        ConsoleParameters,
+        HeaderParameters {
 }
