@@ -36,6 +36,7 @@ Jacksum 3.8.0, Aug TBD
   - the prompt is "Password: " twice if both options -k password -q password have been specified
     (e.g. "jacksum -q password -a hmac:sha256 -k password"), the prompt for the key is now "Key (echo off): " to
     distinguish the input.
+  - issue#32 --header not working using --quick
 
 
 - improved performance:
